update index and homt

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -377,6 +377,11 @@
     bottom: 0px;
 }
 
+
+.am-avg-lg-6 > li:nth-of-type(n){
+ clear:none !important;
+}
+
 /*【2】会员专区--------------------------------------------*/
 
 /*栏目标题*/
